@@ -13,4 +13,5 @@ EBUILD yle-dl-2.5.0-r2.ebuild 1116 SHA256 52940a832844d38e4a91b02add65a69cba76be
 EBUILD yle-dl-2.5.0-r3.ebuild 1111 SHA256 dd3bff0fc441c12cfe6b26b0577632bd078940dc216d0e0a16df8ee08f073489 SHA512 21afbbf38ddc7b272a8f878c99db2541cd5b7d17db3fd525ee47827b4cce264aa1194b920be09e3a4ab13225cdc6ed2dda7a927d7adc1080ce37895218fb60e4 WHIRLPOOL c134b4fc2cde3e6d945165b8d1594ceebfc8295dd6312c3ce61d7639bec6cee6bb0cda96202597b034a99fbc559d2f31a5931ba4e32f4093ba5ac4a048039de7
 EBUILD yle-dl-2.5.0.ebuild 1045 SHA256 1cfc073c1193429786020b58f5caa7ef8066223f118c9ee2460672393155ed25 SHA512 c886eb9ce5dbc1a33c0d0b694114dbcef8cd30a976327044f6f622d97b3dcda2860e0d733223c6b5ce4adf552cb49611b422161f06dd41de49455c4d6805732e WHIRLPOOL 152b423e27437723bff20b351e7e94bc84bea658bbd2b42fa00954717cfb6f588268daa3070cc273c0e7df57361f1360bb485700ecf422b411ae5bd26a481253
 EBUILD yle-dl-2.7.2.ebuild 1111 SHA256 d8f5439353ae8c382a88f0f21aebae81df6006bee3a39090a627fe721b629271 SHA512 c394b9d8be5f1a8a9bc839c953dabbd007a16e3ba28e1b5bb36329042ac75740fa290ae992f10f43a073d6be7b5ac47833fd4e48f845e2d9f74b5dfd78f8a30e WHIRLPOOL 63c7eddbc9cd5a18cb6de4113f59fb3d869e572c4f1d0fed44170ce26c7050ee7773eb1d6814659cec4d0fa0f8886dca37b26f122501ba0776375b98d36003a6
-MISC ChangeLog 262 SHA256 380213d52d91c5f4d5344b7835f70e3c69df34988fb9de6da60658260adba21b SHA512 27702c09e676fe77d0887720ac76dad8db874631094172e76b5b230d08cd7c9f9639f9ff1d6b73a15e7c9e628e0f7a8af481e9c13a94f9d1ac31fb3e798225d6 WHIRLPOOL 9f0125b208ae70bbfb3521bec0646949ca1e155b3b60f8cbf2191c12de316055b9fe36eab9a5b6c5f1200d61d7239fd247c13108728d99eb37b76730c57dcad7
+MISC ChangeLog 388 SHA256 b24c5924380eef1470e597fcc28e63cd2738c3cf394406238678a55cd413d62a SHA512 ff3fc63befdd6d19ca07b66d48dc20642b6ff18a1b0ecf5393ac4f254e317dd3a8f832a82c317536c889fc8d193781e8f6bba4e8bc656552a4ced8099f7b1e91 WHIRLPOOL 2492c7d4125dead40a99d1e37c0e663a8124ec77df54c6b7a4cbb74cc5b81ac70ca9cdb572a912ec045e87623997d48bbdf78b8859037985f80f780dd8e1a780
+MISC metadata.xml 316 SHA256 b737f0a849a6f9bd108c0334d05ba42abd446d45dc98b8d79a6c9422e9bac362 SHA512 33b1b1ca7de98768fdbfa93427ba50027d546930a8df10c0facc4e5550d587527c9bf224b24816ea458a4e8c89028d9089461328894a887cb85dc823496c43ed WHIRLPOOL 3da54c5d38edf1cbe3269db92c042ec37de6c968505d000c342e0a1c38ac04cc01844767feef5df23e22fdf34e294aff96183fb13c7b6c3121d054ce2c09934e
