@@ -1,0 +1,11 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
+<pkgmetadata>
+	<maintainer>
+		<email>tth@harski.org</email>
+		<name>Tuomo Hartikainen</name>
+	</maintainer>
+	<longdescription lang="en">
+		Download media from Yle Areena.
+	</longdescription>
+</pkgmetadata>
