@@ -1,6 +1,9 @@
 # ChangeLog for media-video/yle-dl
-# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: $
+# Distributed under the terms of the GNU General Public License v2
+# Copyright 2015-2015 Tuomo Hartikainen <tth@harski.org>
+
+  15 Jul 2015; Tuomo Hartikainen <tth@harski.org> +metadata.xml:
+  Add metadata.xml
 
 *yle-dl-2.5.0-r3 (23 Jan 2015)
 
